--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
     "ngx-skeleton-loader": "^5.0.0",
     "rxjs": "~7.5.0",
+    "tone": "^14.7.77",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
